kubernetes/apps/medias/bazarr/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: medias
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/name: Bazarr
    gethomepage.dev/group: Media
    gethomepage.dev/description: "Subtitles management"
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - bazarr.lac-coloc.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bazarr
      namespace: medias
      port: 6767
---
# HTTPRoute pour HTTP (redirection 301)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-http-redirect
  namespace: medias
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - bazarr.lac-coloc.fr
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
